# BPA_visual

./: CMakeLists.txt  CMakeLists_with_glad_glfw.txt  main.cpp  readme.md
BPA/: BallPivotingAlgorithm.cpp  BallPivotingAlgorithm.h
input/: bunny.ply  cube.ply
output/: bunny_0.ply
rply/: rply.c
shader/: shader.fs
